Simplify the locks during refresh, use IdentifyHashMap
Signed-off-by: Bukhtawar Khan <bukhtawa@amazon.com>